# tryspace-comp-demo

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  Makefile  demo_checkout.c  demo_checkout.h  demo_cli.c  demo_cli.h  device_cfg.h
fsw/: CMakeLists.txt
fsw/platform_inc/: demo_msgids.h  demo_platform_cfg.h
fsw/src/: demo_app.c  demo_app.h  demo_version.h
fsw/unit-test/: CMakeLists.txt
fsw/unit-test/coveragetest/: coveragetest_demo_app.c
fsw/unit-test/stubs/: demo_device_stubs.c
gsw/: demo.xtce
gsw/displays/: Demo.par
gsw/procedures/: DemoComponent.ycs
mission_inc/: demo_perfids.h
shared/: demo_device.c  demo_device.h  device_cfg.h
sim/: CMakeLists.txt  Makefile  demo_sim.c  demo_sim.h
src/: demo_app.c  demo_app.h  demo_events.h  demo_msg.h
support/: Dockerfile.cli  Dockerfile.runtime  Dockerfile.sim  cli-compose.yml  device_config.j2  device_config.yaml
unit-test/: CMakeLists.txt
unit-test/coveragetest/: coveragetest_demo_app.c  coveragetest_demo_device.c  demo_app_coveragetest_common.h
unit-test/inc/: ut_demo_app.h
unit-test/stubs/: demo_device_stubs.c  libuart_stubs.c
